webook/webook-record-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-record-redis
  labels:
    app: webook-record-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webook-record-redis
  template:
    metadata:
      name: webook-record-redis
      labels:
        app: webook-record-redis
    spec:
      containers:
      - name: webook-record-redis
        image: redis:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379
