webook/webook-record-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-record-redis
spec:
  ports:
  #k8s 内部访问接口
  - port: 6380
    protocol: TCP
    #pod暴露的端口
    targetPort: 6379
    # 外部访问端口，必须在30000-32767之间
    nodePort: 30080
  selector:
    app: webook-record-redis
  type: NodePort
