webook/webook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-record-service
spec:
  type: LoadBalancer
  selector:
    app: webook-record
  ports:
  - name: http
    protocol: TCP
    port: 88
    targetPort: 8081
